# registration-covariance-analysis

./: .clang-format  CMakeLists.txt  JSON_DOCUMENTS.md  README.md  requirements.txt  setup.py
include/: centered_clustering.h  greedy_seed_selection_algorithm.h  grid_pointcloud_separator.h  localized_seed_selection_algorithm.h  nabo_adapter.h  null_pointcloud_logger.h  pointcloud_io.h  pointcloud_io.hpp  pointcloud_logger.h  pointcloud_logger_locator.h  pointcloud_separator.h  points_selector.h  qpc_io.h  seed_selection_algorithm.h  sparse_bins.h  sparse_bins.hpp  util.h  xyz_pointcloud_logger.h
notebooks/: 2018-05-02-CompareCelloCensi.ipynb  2018-05-22-validation-by-dataset.ipynb  2018-05-30-test-husky-dataset.ipynb  2018-08-06-censi-analysis.ipynb  2018-08-08-wishart-kl.ipynb  2018-08-13-loss-computation.ipynb  2018-08-14-kitti-poses.ipynb  2018-08-14-trajectory-plot.ipynb  2018-08-16-find-failed-registrations.ipynb  2018-08-24-test-adjoint.ipynb  2018-08-29-mahalanobis-plot.ipynb  2018-08-30-trajectory-rotation.ipynb  2018-08-31-test-compound.ipynb  2018-08-31-trajectory-translation.ipynb  Bias.ipynb  Central Cluster Selection.ipynb  Covariance vs N Samples.ipynb  Error Metric.ipynb  Error function.ipynb  ExamplesConditioning.ipynb  Frames Debugging.ipynb  Learning Error.ipynb  Learning.ipynb  Overlap.ipynb  Registration Covariance.ipynb  SpectralClustering.ipynb  Tests Lie.ipynb
recova/: alignment.py  binning.py  center_around_gt.py  clustering.py  clustering_batch.py  clustering_dbscan.py  clustering_dbscan_explore_radius.py  clustering_on_pair.py  clustering_plot.py  combiner.py  complete_error_plot.py  covariance.py  covariance_of_registrations.py  density.py  descriptor.py  distribution_to_vtk_ellipsoid.py  error_landscape.py  fig_dist_over_error.py  file_cache.py  find_center_cluster.py  generate_cube.py  generate_hallway.py  husky_dataset.py  io.py  json_util.py  learning.py  learning_dataset.py  merge_json_result.py  merge_result_json.py  model_validation_vtk.py  paperplot.py  plot_covariance_xy.py  plot_distribution_axes.py  plot_error_axes.py  plot_error_convergence.py  plot_error_function.py  plot_match.py  plot_objective_function.py  plot_outlier_bias.py  plot_trail.py  (+16 more)
recova/descriptor/: __init__.py  algo.py  descriptor.py  factory.py  mask.py
recova/learning/: __init__.py  cello.py  knn.py  learning.py  mlp.py  model.py  preprocessing.py  preprocessing.py.orig
recova/pointcloud_gen/: cube.py  cylinder.py  disc.py  hallway.py
recova_core/: CMakeLists.txt  recova_core.cpp  setup.py.in
recova_core/recova_core/: __init__.py
recova_core/test/: test.py
src/: centered_clustering.cpp  centered_clustering_main.cpp  greedy_seed_selection_algorithm.cpp  grid_pointcloud_separator.cpp  grid_pointcloud_separator_main.cpp  json2xyz_main.cpp  localized_seed_selection_algorithm.cpp  nabo_adapter.cpp  normals_of_cloud_main.cpp  overlapping_region_main.cpp  pcd2qpc_main.cpp  point_density_main.cpp  pointcloud_logger.cpp  pointcloud_logger_locator.cpp  pointcloud_separator.cpp  qpc2pcd_main.cpp  qpc_io.cpp  util.cpp  xyz_pointcloud_logger.cpp
